	* improve handling of allow_i2p_mixed setting to work for magnet links
	* fix web seed request for renamed single-file torrents
	* fix issue where web seeds could disappear from resume data
	* extend save_resume with additional conditional flags
	* fix issue with retrying trackers in tiers > 0
	* fix last_upload and last_download resume data fields to use posix time
	* improve error messages for no_connect_privileged_ports, by untangle it from the port filter
	* fix I2P issue introduced in 2.0.0
	* add async tracker status query, post_trackers()
	* add async torrent status query, post_status()
	* support loading version 2 of resume data format
	* fix issue with odd piece sizes
	* add async piece availability query, post_piece_availability()
	* add async download queue query, post_download_queue()
	* add async file_progress query, post_file_progress()
	* add async peer_info query, post_peer_info()

2.0.8 released

	* fix uTP streams timing out instead of closing cleanly
	* add write_torrent_file_buf() overload for generating .torrent files
	* add create_torrent::generate_buf() function to generate into a buffer
	* fix copy_file when the file ends with a sparse region
	* uTP performance, fix packet loss when sending is stalled
	* fix trackers being stuck after session pause/resume
	* fix bug in hash_picker with empty files
	* uTP performance, prevent premature timeouts/resends
	* add option to not memory map files below a certain size
	* settings_pack now returns default values when queried for missing settings
	* fix copy_file fall-back when SEEK_HOL/SEEK_DATA is not supported
	* improve error reporting from file copy and move
	* tweak pad file placement to match reference implementation (tail-padding)
	* uTP performance, more lenient nagle's algorithm to always allow one outstanding undersized packet
	* uTP performance, piggy-back held back undersized packet with ACKs
	* uTP performance, don't send redundant deferred ACKs