@@ -120,12 +120,6 @@ void test_remap_files(storage_mode_t storage_mode = storage_mode_sparse)
 		tor1.add_piece(i, std::move(piece));
 	}
 
-	// read pieces
-	for (auto const i : fs.piece_range())
-	{
-		tor1.read_piece(i);
-	}
-
 	// wait for all alerts to come back and verify the data against the expected
 	// piece data
 	aux::vector<bool, piece_index_t> pieces(std::size_t(fs.num_pieces()), false);
@@ -170,6 +164,7 @@ void test_remap_files(storage_mode_t storage_mode = storage_mode_sparse)
 				auto const idx = pf->piece_index;
 				TEST_CHECK(passed[idx] == false);
 				passed[idx] = true;
+				tor1.read_piece(idx);
 			}
 		}
 	}
